proj1/tests/correct/while_break.py
i = 0
while True:
    if i == 10:
        break
    i = i + 1
print "break success"
