proj1/tests/error/bad_indent_0.py
i = 0
while i < 10:
    if i % 2 == 1:
        continue
        elif i = 5:
            print 5
    print i,
